# smart-contract-analysis-tools

./: .gitignore  .gitmodules  CONTRIBUTING.md  DeepDive.md  README.md  analysis-config-example.toml  package.json
SMTChecker/: run-SMTChecker.sh
SMTChecker/smtchecker_runner/src/: lib.rs
docker/: Dockerfile.analysisToolbox  Dockerfile.analysisTools  Dockerfile.kevm  README.md  releaseDockerAnalysisToolbox.sh  releaseDockerAnalysisTools.sh  releaseDockerKevm.sh
docs/: analysis-techniques.md  front-page.md  possible-exploits.md
examples/: README.md  analysis-config.toml
examples/kevm-specs/: VeriToken-spec.md
examples/report/: VeriToken-kevm.result
examples/report/EtherStore/: report-EtherStore.md
examples/report/VeriAuctionTokenForEth_problems/: report-VeriAuctionTokenForEth_problems.md
examples/src/smart-contracts/: VeriAuctionTokenForEth_problems.sol
hevm/: README.md  run-hevm.sh
kevm/: README.md  run-VeriToken-spec.sh  run-kevm.sh
kevm-example-spec/: VeriToken-spec.md
kevm/kevm_runner/: Cargo.toml
kevm/kevm_runner/src/: lib.rs
mythril/: run-mythril.sh
mythril/mythril_runner/: Cargo.toml
report_generator/: Cargo.toml  README.MD  README.md  data-transformation.md  input.json  output-data-template.json  outputDataTemplate.json
report_generator/outputs/: full_report.md
report_generator/src/: generate_report.rs  main.rs  read_json.rs
report_generator/templates/: full_report_template.md  macros_problems.md  macros_slither_detectors.md  macros_tools.md
slither/: README.md  run-slither.sh  slither.config.json
(+2 files in other folders)
