[package]
name = "report_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mythril_runner = { path = "../mythril/mythril_runner" }
slither_runner = { path = "../slither/slither_runner" }
smtchecker_runner = { path = "../SMTChecker/smtchecker_runner" }
toml = "0.5.9"
tera = "1.17.0"
lazy_static = "1.4.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_derive = "1.0.147"
serde_json = "1.0.87"